buildscript {
	ext {
		springBootVersion = '2.3.0.RELEASE'
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

plugins {
	id "java"
	id "org.springframework.boot" version "2.2.1.RELEASE" apply false
	id "io.spring.dependency-management" version "1.0.10.RELEASE" apply false
	id "org.liquibase.gradle" version "2.0.4" apply false
}

apply plugin: 'java'
apply plugin: 'org.liquibase.gradle'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'com.example'
version = '1.0'
sourceCompatibility = "1.8"

repositories {
	mavenCentral()
}

liquibase {
	activities {
		postgresDevLocal {
			if (project.hasProperty('contexts')) {
				contexts contexts
			}
			changeLogFile "/Users/a18914814/gradle-getting-started/src/main/resources/db/changelog/master-changelog.xml"
			url "jdbc:postgresql://ec2-34-196-34-142.compute-1.amazonaws.com:5432/dbjrg34fp2l5hq"
			username "uulmmrgtokbnwa"
			password "0e3e8f3e016029d1d800bd85b4b302fc005394031f6e8780d08e1a6eb626430d"
//			url "jdbc:postgresql://localhost:5432/postgres?reWriteBatchedInserts=true"
//			username "postgres"
//			password "postgres"
		}
	}
}

dependencies {
	compileOnly "org.projectlombok:lombok"
	annotationProcessor "org.projectlombok:lombok"

	compileOnly 'org.mapstruct:mapstruct:1.4.2.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'

	annotationProcessor "org.hibernate:hibernate-jpamodelgen"

	implementation "org.liquibase:liquibase-core"
	liquibaseRuntime "ch.qos.logback:logback-core"
	liquibaseRuntime "ch.qos.logback:logback-classic"
	liquibaseRuntime "org.liquibase:liquibase-core"
	liquibaseRuntime "org.postgresql:postgresql"

	implementation "org.springframework.boot:spring-boot-starter"
	implementation "org.springframework.boot:spring-boot-starter-actuator"
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
	implementation "com.fasterxml.jackson.core:jackson-annotations"
	implementation "com.fasterxml.jackson.core:jackson-databind"
	implementation "org.apache.commons:commons-lang3:3.12.0"
	implementation "org.apache.commons:commons-collections4:4.4"
	implementation "javax.validation:validation-api:2.0.1.Final"

	runtimeOnly 'org.postgresql:postgresql'
	runtimeOnly 'org.webjars:jquery:3.3.1-1'
	runtimeOnly 'org.webjars:jquery-ui:1.12.1'
	runtimeOnly 'org.webjars:bootstrap:4.1.3'
	runtimeOnly 'org.webjars:webjars-locator:0.38'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}